IndexedDB add() should fail if key is NaN https://bugs.webkit.org/show_bug.cgi?id=62286

Patch by Joshua Bell <jsbell@chromium.org> on 2011-10-04
Reviewed by Tony Chang.

Source/WebCore:

Test: storage/indexeddb/invalid-keys.html

Implement special case - numbers are valid keys, except for NaN.

* bindings/v8/IDBBindingUtilities.cpp:
(WebCore::createIDBKeyFromValue):

LayoutTests:

Tests for NaN and other invalid IndexedDB keys.

* storage/indexeddb/invalid-keys-expected.txt: Added.
* storage/indexeddb/invalid-keys.html: Added.

Canonical link: https://commits.webkit.org/85393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96631 268f45cc-cd09-0410-ab3c-d52691b4dbfc